--- a/style.css
+++ b/style.css
@@ -6,9 +6,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
 }
 #buttons {
   margin: 20px;
+  z-index: 1;
 }
 button {
   margin: 5px;
@@ -23,10 +25,6 @@ button {
 button:hover {
   background: #555;
 }
-#modelContainer {
-  width: 90%;
-  max-width: 800px;
-}
-iframe {
-  border-radius: 10px;
+canvas {
+  display: block;
 }
