--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+@font-face {
+  font-family: "balato";
+  src: url('m6x11plus.ttf') format('truetype');
+}
+
 body {
   margin: 0;
-  font-family: Monospace;
+  font-family: "yes", sans-serif;
   background: #111;
   color: white;
   display: flex;
@@ -9,22 +14,37 @@ body {
   overflow: hidden;
 }
 #buttons {
-  margin: 20px;
+  margin: 10px;
   z-index: 1;
 }
 button {
+  font-family: "balato", sans-serif;
   margin: 5px;
   padding: 10px 15px;
   font-size: 16px;
-  background: #333;
-  color: white;
+  background: #6b0000;
+  color: rgb(255, 255, 255);
   border: none;
-  border-radius: 5px;
+  border-radius: 60px;
   cursor: pointer;
+  transition: background .2s ease, transform 0.1s ease;
 }
+
 button:hover {
-  background: #555;
+  background: #ff0000;
+  transform: scale(1.3); 
 }
 canvas {
   display: block;
+}
+#footer {
+  font-family: "balato", sans-serif;
+  font-size: 10px;
+  color: #ccc;
+  padding: 5px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background: #111;
 }
