--- a/style.css
+++ b/style.css
@@ -69,3 +69,14 @@ canvas {
 #refreshFooter:hover {
   background: #555;
 }
+#middle-image {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px; 
+  opacity: .05; 
+  pointer-events: none; 
+  z-index: 0; 
+  user-select: none;
+}
