--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
 }
 
 button {
+
   font-family: "balato", sans-serif;
   margin: 5px;
   padding: 10px 15px;
@@ -41,6 +42,7 @@ button {
   min-width: 120px;
   text-align: center;
   user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 button.hover-grow {
