--- a/style.css
+++ b/style.css
@@ -55,16 +55,24 @@ button:hover {
 }
 
 @keyframes balatro-microshake {
-  0%   { transform: scale(1.3) translate(0px, 0px) rotate(0deg); }
-  10%  { transform: scale(1.3) translate(-1px, 1px) rotate(-10deg); }
-  70%  { transform: scale(1.3) translate(0.5px, -0.5px) rotate(0.4deg); }
-  80%  { transform: scale(1.3) translate(1px, -1px) rotate(-3deg); }
-  84%  { transform: scale(1.3) translate(-0.3px, 0.3px) rotate(.6deg); }
-  100% { transform: scale(1.3) translate(0px, 0px) rotate(0deg); }
+  0%   { transform: scale(1.3) translate(0px, 0px) rotate(-10deg); }
+  10%  { transform: scale(1.3) translate(0px, 0px) rotate(-10deg); }
+  20%  { transform: scale(1.3) translate(0px, 0px) rotate(10deg); }
+  25%  { transform: scale(1.2) translate(0px, 0px) rotate(10deg); }
+  30%  { transform: scale(1..1) translate(0px, 0px) rotate(10deg); }
+  40%  { transform: scale(.9) translate(0px, 0px) rotate(3deg); }
+  50%  { transform: scale(1.2) translate(0px, 0px) rotate(0deg); }
+  60%  { transform: scale(1.2) translate(0px, 0px) rotate(-5deg); }
+  70%  { transform: scale(1.2) translate(0px, 0px) rotate(4deg); }
+  80%  { transform: scale(1.1) translate(0px, 0px) rotate(4deg); }
+  85%  { transform: scale(1.1) translate(0px, 0px) rotate(3.4deg); }
+  90%  { transform: scale(1.1) translate(0px, 0px) rotate(2deg); }
+  95%  { transform: scale(1.1) translate(0px, 0px) rotate(1.5deg); }
+  100% { transform: scale(1.2) translate(0px, 0px) rotate(0deg); }
 }
 
 .balatro-tilt-shake-click {
-  animation: balatro-microshake 0.3s steps(2, end);
+  animation: balatro-microshake .395s steps(50, end);
 }
 
 #footer {
